Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136490

QSqlQueryModel::setLastError should be const

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P4: Low P4: Low
    • 6.11.0 FF
    • 6.9.0
    • SQL Support
    • All
    • 6733f3893 (dev), d99d653da (dev)

      QSqlQueryModel::setLastError should be const because d->error is mutable. It cannot be called in other const functions with current settings.

        For Gerrit Dashboard: QTBUG-136490
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            yuanxun Xun Yuan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes