QSqlQueryModel::setLastError should be const

The setLastError() function only modifies the mutable member d->error,
so it can safely be marked as const. This change allows setLastError()
to be called from other const member functions.

Fixes: QTBUG-136490
Change-Id: I62999a2696b1742208745890a76769f8977918cc
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>